# USD-Rigging-Schema

./: README.md
HoudiniMeshUsd/: CMakeLists.txt  README.md  SOP_importUSD.C  SOP_importUSD.h
HoudiniSkeletonUsd/: CMakeLists.txt  README.md  SOP_testSkeleton.C  SOP_testSkeleton.h
mayaMeshUsd/: CMakeLists.txt  README.md  getMeshInfo.cpp
mayaSkeletonUsd/: CMakeLists.txt  README.md  getSkeletonInfo.cpp
